Fix text color in dark mode for session review description

--- a/src/components/trainer/SessionReviewContainer.css
+++ b/src/components/trainer/SessionReviewContainer.css
@@ -44,6 +44,8 @@
   height: 50px;
   box-sizing: border-box;
   padding: 0px 60px;
+  transition: color 0.5s ease;
+  color: var(--text);
 }
 
 #sessionDescContainer > span {
